<resources>
    <string name="app_name">SWAMB Client</string>
    <string name="title_home">Home</string>
    <string name="title_linkage">Linkage</string>
    <string name="title_setting">Setting</string>
    <string name="title_linkage_detail">Linkage Detail</string>
    <string name="title_barcode_scanner">SWAMB Linkage QR Scanner</string>
    <string name="title_add_linkage">Add Linkage</string>

    <string name="default_notification_channel_id">DEFAULT_NOTIFICATION_ID</string>
    <string name="default_notification_channel_name">DEFAULT_NOTIFICATION_NAME</string>
    <string name="default_notification_channel_description">DEFAULT_NOTIFICATION_DESCRIPTION</string>

    <string name="authentication_notification_channel_id">AUTH_NOTIFICATION_ID</string>
    <string name="authentication_notification_channel_name">SWAMB Authentication Notification</string>
    <string name="authentication_notification_channel_description">Notification channel for SWAMB Authentication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="text_password_criteria"><![CDATA[Password Criteria:\n• 8 Characters Minimum\n• 64 Characters Maximum\n• Contain at least one (1) character from four (4) of the allowed characters category \n\nAllowed characters:\n• Number [0–9]\n• Lowercase letter [a-z]\n• Uppercase letter [A-Z]\n• Special Character [!@#$%^&*()\-_=+{};:,<.>]]]></string>
    <string name="title_auth_history">Authentication History</string>

</resources>