<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fhanjacson.swamb_client_android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_liveBarcodeScanningFragment"
            app:destination="@id/liveBarcodeScanningFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_linkage"
        android:name="com.fhanjacson.swamb_client_android.ui.linkage.LinkageFragment"
        android:label="@string/title_linkage"
        tools:layout="@layout/fragment_linkage" >
        <action
            android:id="@+id/action_navigation_linkage_to_linkageDetailFragment"
            app:destination="@id/linkageDetailFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/action_navigation_linkage_to_liveBarcodeScanningFragment"
            app:destination="@id/liveBarcodeScanningFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.fhanjacson.swamb_client_android.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/liveBarcodeScanningFragment"
        android:name="com.fhanjacson.swamb_client_android.ui.qr_scanner.LiveBarcodeScanningFragment"
        android:label="@string/title_barcode_scanner"
        tools:layout="@layout/fragment_live_barcode_scanning" >
        <action
            android:id="@+id/action_liveBarcodeScanningFragment_to_addAccountFragment"
            app:destination="@id/addAccountFragment"
            app:popUpTo="@id/navigation_home"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>
    <fragment
        android:id="@+id/addAccountFragment"
        android:name="com.fhanjacson.swamb_client_android.ui.addAccount.AddAccountFragment"
        android:label="@string/title_add_linkage"
        tools:layout="@layout/fragment_add_account" />
    <fragment
        android:id="@+id/linkageDetailFragment"
        android:name="com.fhanjacson.swamb_client_android.ui.linkage.LinkageDetailFragment"
        android:label="@string/title_linkage_detail"
        tools:layout="@layout/fragment_linkage_detail" >
        <argument
            android:name="linkageData"
            app:argType="com.fhanjacson.swamb_client_android.model.LinkageData" />
    </fragment>
</navigation>